--- a/index.html
+++ b/index.html
@@ -1,3 +1,111 @@
-<html></html>
-<head></head>
-<body></body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Web studio</title>
+</head>
+<body>
+   <header>
+      <a href="./index.html">WEB STUDIO</a>
+      <nav>
+         <ul>
+            <li>
+               <a href="./index.html">Studio</a>
+            </li>
+            <li>
+               <a href="./index.html">Portfolio</a>
+            </li>
+            <li>
+               <a href="./index.html">Contacts</a>
+            </li>
+         </ul>
+      </nav>
+      <address>
+         <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a><br />
+         <a href="tell:+11 (000) 111-11-11">11 (000) 111-11-11</a><br />
+      </address>
+   </header>
+   <main>
+      <section>
+         <h1>Effective Solutions
+         for Your Business
+         </h1>
+         <button type="button">Order Service</button>
+      </section>
+      <section>
+         <h2>Our advantages</h2>
+         <ul>
+            <li>
+               <h3>Strategy</h3>
+               <p>
+               Our goal is to identify the business
+               problem to walk away with the perfect and creative solution.
+               </p>
+            </li>
+            <li>
+               <h3>Punctuality</h3>
+               <p>
+               Bring the key message 
+               to the brand's audience for the best price within the shortest possible time.
+               </p>
+            </li>
+            <li>
+               <h3>Diligence</h3>
+               <p>
+               Research and confirm brands that present the strongest
+               digital growth opportunities and minimize risk.
+               </p>
+            </li>
+            <li>
+               <h3>Technologies</h3>
+               <p>
+               Technologies
+               Design practice focused 
+               on digital experiences. We bring forth a deep passion for problem-solving.
+               </p>
+            </li>
+         </ul>
+      </section> 
+      <section>
+         <h2>Our Team</h2>
+         <ul>
+            <li>
+             <img src="./images/Mark.jpg" alt="Mark Guerrero">
+             <h3>Mark Guerrero</h3>
+             <h4>Product Designer</h4>
+             width="264"
+             height="260"
+            </li>
+            <li>
+               <img src="./images/Tom.jpg" alt="Tom Ford">
+               <h3>Tom Ford</h3>
+               <h4>Frontend Developer</h4>
+               width="264"
+               height="260"
+            </li>
+            <li>
+               <img src="./images/Camila.jpg" alt="Camila Garcia">
+               <h3>Camila Garcia</h3>
+               <h4>Marketing</h4>
+               width="264"
+               height="260"
+            </li>
+            <li>
+            <img src="./images/Daniel.jpg" alt="Daniel Wilson">
+            <h3>Daniel Wilson</h3>
+            <h4>Ul Designer</h4>
+            width="264"
+            height="260"
+            </li>
+         </ul>
+      </section>
+   </main>
+   <footer>
+      <a href="./index.html">WEB STUDIO</a>
+      <p>
+      Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+      </p>
+   </footer>
+</body>
+</html>
