--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
             <li>
                <h3>Technologies</h3>
                <p>
-               Technologies
                Design practice focused 
                on digital experiences. We bring forth a deep passion for problem-solving.
                </p>
@@ -71,41 +70,43 @@
          <h2>Our Team</h2>
          <ul>
             <li>
-             <img src="./images/Mark.jpg" alt="Mark Guerrero">
-             <h3>Mark Guerrero</h3>
-             <h4>Product Designer</h4>
+             <img src="./images/Mark.jpg" alt="Mark Guerrero"
              width="264"
              height="260"
+             >
+             <h3>Mark Guerrero</h3>
+             <h4>Product Designer</h4>
             </li>
             <li>
-               <img src="./images/Tom.jpg" alt="Tom Ford">
+               <img src="./images/Tom.jpg" alt="Tom Ford"
+               width="264"
+               height="260"
+               >
                <h3>Tom Ford</h3>
                <h4>Frontend Developer</h4>
-               width="264"
-               height="260"
             </li>
             <li>
-               <img src="./images/Camila.jpg" alt="Camila Garcia">
+               <img src="./images/Camila.jpg" alt="Camila Garcia"
+               width="264"
+               height="260"
+               >
                <h3>Camila Garcia</h3>
                <h4>Marketing</h4>
-               width="264"
-               height="260"
-            </li>
+               </li>
             <li>
-            <img src="./images/Daniel.jpg" alt="Daniel Wilson">
-            <h3>Daniel Wilson</h3>
-            <h4>Ul Designer</h4>
+            <img src="./images/Daniel.jpg" alt="Daniel Wilson"
             width="264"
             height="260"
-            </li>
+            >
+            <h3>Daniel Wilson</h3>
+            <h4>Ul Designer</h4>
+             </li>
          </ul>
       </section>
    </main>
    <footer>
       <a href="./index.html">WEB STUDIO</a>
-      <p>
       Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-      </p>
-   </footer>
+      </footer>
 </body>
 </html>
